v4 enchancements and bug fixes of alignment

--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -54,7 +54,7 @@
   }
 
   .mocking-no-post-container {
-    height: 95vh;
+    height: 55vh;
     position: relative;
     top: 10%;
     left: 0% !important;
