--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -40,7 +40,7 @@
     font-size: 40px;
     position: absolute;
     bottom: 30px;
-    right: 20px;
+    right: 30px;
     color: black;
     box-shadow: 2px 2px 10px 4px rgb(255, 0, 0);
     border-radius: 50px;
@@ -48,12 +48,22 @@
 }
 
 .close-create-post-drawer {
-    border: 2px solid;
-    font-size: 45px;
+    width: 87vw !important;
+    border: 1px dashed white;
     position: absolute;
-    border: 4px dashed black;
     bottom: 0px;
-    left: 170px;
+    background-color: rgb(128, 8, 112);
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
 
+.close-button-create-post-drawer {
+
+    font-size: 25px;
+    border-radius: 50px;
+    color: black !important;
+    font-family: 'Sofia';
 }
